--- a/index.html
+++ b/index.html
@@ -323,33 +323,33 @@
 					<h2 class="main-tittle">Постоянные клиенты</h2>
 					<ul class="clients-list">
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка YA & CO">
-								<img src="./images/logo-clients/logo1.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка YA & CO">
+								<img  src="./images/logo-clients/logo1.svg"  alt="" />
 							</a>
 						</li>
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company tag line here">
-								<img src="./images/logo-clients/logo2.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company tag line here">
+								<img  src="./images/logo-clients/logo2.svg"  alt="" />
 							</a>
 						</li>
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company">
-								<img src="./images/logo-clients/logo3.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company">
+								<img   src="./images/logo-clients/logo3.svg"  alt="" />
 							</a>
 						</li>
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка FOSTER PETERS">
-								<img src="./images/logo-clients/logo4.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка FOSTER PETERS">
+								<img  src="./images/logo-clients/logo4.svg"  alt="" />
 							</a>
 						</li>
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Brand">
-								<img src="./images/logo-clients/logo5.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Brand">
+								<img  src="./images/logo-clients/logo5.svg"  alt="" />
 							</a>
 						</li>
 						<li class="clients-item">
-							<a href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company tag line">
-								<img src="./images/logo-clients/logo6.svg" alt="" />
+							<a class="clients-img" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка Company tag line">
+								<img  src="./images/logo-clients/logo6.svg"  alt="" />
 							</a>
 						</li>
 					</ul>
@@ -360,7 +360,7 @@
 		<footer class="footer">
 			<div class="container footer-flex">
 				<div class="logo-address">
-					<div class="logo logo-footer">
+					<div class="logo-footer logo">
 						<a href="./index.html">
 							<span class="first-word">Web</span>
 							Studio
