Исправил паддинги в секциях

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 			</section>
 			<!-- Преимущества -->
-			<section>
+			<section class="advantages">
 				<div class="container">
 					<h2 class="main-tittle visually-hidden"">Преимущества</h2>
 					<ul class="list advantage-list">
